Tue Sep  7 17:38:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Common/CIF_Common.mpc:
          Resolved compile issue (added after).

Tue Sep  7 12:06:30 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added CIF and TopicName tests.

        * connectors/dds4ccm/impl/ContentFilteredTopic_T.cpp:
        * connectors/dds4ccm/impl/DDSPublisherListener_T.cpp:
        * connectors/dds4ccm/impl/DDSSubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/DDSTopicListener_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipantFactory_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
        * connectors/dds4ccm/impl/Publisher_T.cpp:
        * connectors/dds4ccm/impl/QueryCondition_T.cpp:
        * connectors/dds4ccm/impl/ReadCondition_T.cpp:
        * connectors/dds4ccm/impl/Subscriber_T.cpp:
        * connectors/dds4ccm/impl/TopicDescription_T.cpp:
        * connectors/dds4ccm/impl/Topic_T.cpp:
          Removed initialization for _var variables.
          The create_* methods in DomainParticipant_T won't throw an exception but
          will return a _nil when the DDS vendor returns nil on the creation of
          a DDS entity. In DDS_TopicBase_Connector_T, the return value is checked
          and an exception is thrown when the return value is nil.

        * connectors/dds4ccm/tests/TopicName:
        * connectors/dds4ccm/tests/TopicName/Base:
        * connectors/dds4ccm/tests/TopicName/Base/TopicName_Test_Base.idl:
        * connectors/dds4ccm/tests/TopicName/Base/TopicName_Test_Base.mpc:
        * connectors/dds4ccm/tests/TopicName/Component: