@@ -1,190 +1,0 @@
-<Deployment:DeploymentPlan
-                          xmlns:Deployment="http://www.omg.org/Deployment"
-                          xmlns:xmi="http://www.omg.org/XMI"
-                          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                          xsi:schemaLocation="http://www.omg.org/Deployment Deployment.xsd">
-  <label>TopicNameEventTest_Depl</label>
-  <UUID>TopicNameEventTest_Depl</UUID>
-
-  <implementation xmi:id="ComponentImplementation">
-    <name>ComponentImplementation</name>
-    <source/>
-    <artifact xmi:idref="Component_ExecArtifact" />
-    <artifact xmi:idref="Component_SvntArtifact" />
-    <execParameter>
-      <!-- entrypoint as exec parameter (see 10.6.1) -->
-      <name>component factory</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>create_TopicName_Test_TopicNameTestComponent_Impl</string>
-        </value>
-      </value>
-    </execParameter>
-    <execParameter>
-      <name>edu.vanderbilt.dre.CIAO.ServantEntrypoint</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>create_TopicName_Test_TopicNameTestComponent_Servant</string>
-        </value>
-      </value>
-    </execParameter>
-    <execParameter>
-      <name>edu.vanderbilt.dre.CIAO.ServantArtifact</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>Component_svnt</string>
-        </value>
-      </value>
-    </execParameter>
-    <execParameter>
-      <name>edu.vanderbilt.dre.CIAO.ExecutorArtifact</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>Component_exec</string>
-        </value>
-      </value>
-    </execParameter>
-  </implementation>
-
-  <implementation xmi:id="TopicName_Test_ConnectorImplementation">
-    <name>TopicName_Test_ConnectorImplementation</name>
-    <source/>
-    <artifact xmi:idref="TopicName_Test_Connector_ExecArtifact" />
-    <artifact xmi:idref="TopicName_Test_Connector_SvntArtifact" />
-    <execParameter>
-      <!-- entrypoint as exec parameter (see 10.6.1) -->
-      <name>component factory</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>create_TopicNameTestConnector_DDS_Event_Impl</string>
-        </value>
-      </value>
-    </execParameter>
-    <execParameter>
-      <name>edu.vanderbilt.dre.CIAO.ServantEntrypoint</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>create_TopicNameTestConnector_DDS_Event_Servant</string>
-        </value>
-      </value>
-    </execParameter>
-    <execParameter>
-      <name>edu.vanderbilt.dre.CIAO.ServantArtifact</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>TopicName_Test_Connector_svnt</string>
-        </value>
-      </value>
-    </execParameter>
-    <execParameter>
-      <name>edu.vanderbilt.dre.CIAO.ExecutorArtifact</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>TopicName_Test_Connector_exec</string>
-        </value>
-      </value>
-    </execParameter>
-  </implementation>
-
-  <instance xmi:id="ComponentInstance">
-    <name>Component</name>
-    <node>ComponentNode</node>
-    <source/>
-    <implementation xmi:idref="ComponentImplementation" />
-  </instance>
-
-  <instance xmi:id="TopicName_Test_ConnectorInstance">
-    <name>TopicName_Test_Connector</name>
-    <node>ComponentNode</node>
-    <source/>
-    <implementation xmi:idref="TopicName_Test_ConnectorImplementation" />
-    <configProperty>
-      <name>topic_name</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string></string>
-        </value>
-      </value>
-    </configProperty>
-  </instance>
-
-  <connection>
-    <name>write_data</name>
-    <deployRequirement>
-      <name>edu.dre.vanderbilt.DAnCE.ConnectionType</name>
-      <resourceType>Local_Interface</resourceType>
-    </deployRequirement>
-    <internalEndpoint>
-      <portName>info_write_data</portName>
-      <provider>false</provider>
-      <kind>SimplexReceptacle</kind>
-      <instance xmi:idref="ComponentInstance" />
-    </internalEndpoint>
-    <internalEndpoint>
-      <portName>supplier_data</portName>
-      <provider>true</provider>
-      <kind>Facet</kind>
-      <instance xmi:idref="TopicName_Test_ConnectorInstance" />
-    </internalEndpoint>
-  </connection>
-
-
-  <artifact xmi:id="TopicName_Test_Connector_ExecArtifact">
-    <name>TopicName_Test_Connector_exec</name>
-    <source/>
-    <node/>
-    <location>TopicName_Test_Connector_exec</location>
-  </artifact>
-  <artifact xmi:id="TopicName_Test_Connector_SvntArtifact">
-    <name>TopicName_Test_Connector_svnt</name>
-    <source/>
-    <node/>
-    <location>TopicName_Test_Connector_svnt</location>
-  </artifact>
-  <artifact xmi:id="TopicName_Test_Connector_StubArtifact">
-    <name>TopicName_Test_Connector_stub</name>
-    <source/>
-    <node/>
-    <location>TopicName_Test_Connector_stub</location>
-  </artifact>
-
-  <artifact xmi:id="Component_ExecArtifact">
-    <name>Component_exec</name>
-    <source/>
-    <node/>
-    <location>Component_exec</location>
-  </artifact>
-  <artifact xmi:id="Component_SvntArtifact">
-    <name>Component_svnt</name>
-    <source/>
-    <node/>
-    <location>Component_svnt</location>
-  </artifact>
-</Deployment:DeploymentPlan>
